# btc-ai-agent

./: .coinglass_session.json  .env.example  .gitignore  README.md  claude.md  debug_hover.html  debug_text.txt  debug_tf.py  leverage_data.csv  main.py  pyproject.toml  test.py
.claude/: claude.md  settings.json
.claude/agents/: devops.md  test-runner.md  trading-expert.md  web-api.md
.claude/commands/: check.md  deploy.md  dev.md  test.md
.claude/rules/: firebase-patterns.md  python-style.md
.claude/skills/: commit.md
btc_agent/: config.py  firebase_app.py  notifiers.py  scheduler.py  storage.py
btc_agent/briefing/: agent.py  fetcher.py  summarizer.py
btc_agent/liquidity/: collector.py  probe.py
btc_agent/scanner/: agent.py  aggregator.py  data.py  depo.py  levels.py  markov_regime.py  markov_tickers.py  oi.py  oi_data.py  patterns.py
btc_agent/trading/: executor.py  firestore_store.py  models.py  scanner.py  vishal_strategies.py
btc_agent/trading/brokers/: __init__.py  base.py  binance.py  bybit.py  coinbase.py  coindcx.py  delta.py  pepperstone.py
btc_agent/web/: app.py  auth.py
btc_agent/web/static/: main.js  style.css
btc_agent/web/templates/: index.html  login.html
deploy/: deploy.sh  ec2_setup.sh  install_service.sh
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
tasks/: lesson.md  todo.md
tests/: test_aggregator.py  test_config.py  test_executor.py  test_levels.py  test_oi.py  test_patterns.py  test_trading.py  test_vishal_strategies.py
