[project]
name = "btc-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.89.0",
    "ccxt>=4.5.47",
    "fastapi>=0.111.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "praw>=7.8.1",
    "pytz>=2024.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "schedule>=1.2.2",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
